--- a/code.ipynb
+++ b/code.ipynb
@@ -914,7 +914,8 @@
     "\n",
     "app = dash.Dash()\n",
     "\n",
-server = app.server
+    "server = app.server" 
+    "\n"
     "app.layout = html.Div([\n",
     "  html.H1('Sales breakdowns'),\n",
     "  html.Div(\n",
